Fixed name resize overlap

--- a/css/styles.css
+++ b/css/styles.css
@@ -24,6 +24,7 @@ header {
   font-size: 70px;
   font-family: 'Bungee Inline', cursive;
   color: #F25B44; /* #3399FF */
+  line-height: 120%;
 }
 
 #left {
